k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spam-email-validation
spec:
  type: ClusterIP
  selector:
    app: spam-email-validation
  ports:
    - port: 80
      targetPort: 8501
